syntax = "proto3";

package bedrock;

service BedrockService {
  rpc ProcessPrompt (PromptRequest) returns (PromptResponse);
}

message PromptRequest {
  string prompt = 1;
}

message PromptResponse {
  string response = 1;
}